[package]
name = "multitarget-issue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.thumbv7em-none-eabihf.dependencies]
panic-semihosting = "0.5"
heapless = "0.7.7"

[target.x86_64-pc-windows-msvc.dependencies]
panic-semihosting = "0.5"
embedded-graphics-simulator = "0.3.0"
