[package]
name = "multitarget-issue"
version = "0.1.0"
edition = "2018"
# Must use resolver v2 to avoid a std/no-std clash when building for different targets
# https://doc.rust-lang.org/cargo/reference/features.html#feature-resolver-version-2
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.thumbv7em-none-eabihf.dependencies]
panic-semihosting = "0.5"
heapless = "0.7.7"

[target.x86_64-pc-windows-msvc.dependencies]
panic-semihosting = "0.5"
embedded-graphics-simulator = "0.3.0"
